Added styles and icons for header

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,22 @@
     <header class="header">
         <div class="container">
           <a href="#" class="header-logo">
-            <img src="#" alt="logo">
+            <img src="images/icons/logo.svg" alt="logo">
           </a>
 
           <div class="header-nav">
             <nav class="nav">
               <ul class="nav-list">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">search</a>
+                  <a href="#" class="nav-link">
+                    <img src="images/icons/search-alt.svg" alt="search">
+                  </a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link">Anruf</a>
+                  <a href="#" class="nav-link nav-link_img">
+                    <img src="images/icons/mobile-vibration.svg" alt="mobile">
+                    Anruf
+                  </a>
                 </li>
                 <li class="nav-item">
                   <a href="#" class="nav-link">Generatoren</a>
@@ -40,8 +45,8 @@
                 </li>
               </ul>
             </nav>
-            <button class="btn header-btn">Anfragen</button>
-            <button class="btn header-btn">Anmelden</button>
+            <button class="btn btn-small btn-green">Anfragen</button>
+            <button class="btn btn-small btn-grey">Anmelden</button>
           </div>
         </div>
     </header>
@@ -73,13 +78,13 @@
              </button>
            </div>
            <div class="promo-img">
-             <img src="images/favicon.svg" alt="promo">
+             <img src="images/promo/promo-image.png" alt="promo">
            </div>
          </div>
 
          <div class="promo">
            <div class="promo-img">
-             <img src="images/favicon.svg" alt="promo">
+             <img src="images/promo/requirements-image.png" alt="requirements-image">
 
              <div class="promo-card">
                <span>Merke:</span>
@@ -216,7 +221,7 @@
 
            </div>
            <div class="promo-img">
-             <img src="images/favicon.svg" alt="promo">
+             <img src="images/promo/specialist-image.png" alt="specialist-image">
              <div class="promo-text">
                <p>
                  In der Vorbereitungsphase findet der Ghostwriter ein geeignetes
@@ -229,7 +234,7 @@
 
          <div class="promo">
            <div class="promo-img">
-             <img src="images/favicon.svg" alt="promo">
+             <img src="images/promo/advantages-image.png" alt="advantages-image">
            </div>
 
            <div class="promo-text">
@@ -282,7 +287,7 @@
 
            </div>
            <div class="promo-img">
-             <img src="images/favicon.svg" alt="promo">
+             <img src="images/promo/man-image.png" alt="man-image">
            </div>
          </div>
 
