Added styles for footer

--- a/src/index.html
+++ b/src/index.html
@@ -194,21 +194,21 @@
                  </div>
                  <div class="slider-item_rating">
                    5
-                   <span class="slider-item_star">
-                   <img src="images/icons/star-green.svg" alt="star">
-                 </span>
-                   <span class="slider-item_star">
-                   <img src="images/icons/star-green.svg" alt="star">
-                 </span>
-                   <span class="slider-item_star">
-                   <img src="images/icons/star-green.svg" alt="star">
-                 </span>
-                   <span class="slider-item_star">
-                   <img src="images/icons/star-green.svg" alt="star">
-                 </span>
-                   <span class="slider-item_star">
-                   <img src="images/icons/star-green.svg" alt="star">
-                 </span>
+                  <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                  <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                  <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                  <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                  <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
                  </div>
                </div>
                <div class="slider-item_text">
@@ -392,7 +392,7 @@
              </div>
            </div>
 
-           <button class="btn">
+           <button class="btn btn-green btn-middle">
              Jetzt unverbindlich anfragen
            </button>
          </div>
@@ -404,97 +404,122 @@
       <div class="container">
 
         <div class="footer-content">
-          <div class="footer-item">
-            <a href="tel:+4962153399112">+49(621) 53399112</a>
-            <span> Fragen? Ruf uns einfach an!</span>
-
-            <div class="footer-rating">
-              ***** 4,5/5
+          <div class="footer-cell">
+            <div class="footer-contact">
+              <a href="tel:+4962153399112" class="footer-phone">+49(621) <span class="footer-phone_bold">53399112</span></a>
+              <p class="footer-contact_text"> Fragen? Ruf uns einfach an!</p>
             </div>
 
-            <div>
+            <div class="footer-rating">
+              <span class="footer-rating_star">
+                <img src="images/icons/star.svg" alt="star">
+              </span>
+              <span class="footer-rating_star">
+                <img src="images/icons/star.svg" alt="star">
+              </span>
+              <span class="footer-rating_star">
+                <img src="images/icons/star.svg" alt="star">
+              </span>
+              <span class="footer-rating_star">
+                <img src="images/icons/star.svg" alt="star">
+              </span>
+              <span class="footer-rating_star">
+                <img src="images/icons/star.svg" alt="star">
+              </span>
+
+              <p class="footer-rating_text">
+                4,5
+                <span class="footer-rating_break">/</span>
+                5
+              </p>
+            </div>
+
+            <div class="footer-dropdown">
               Infos
             </div>
           </div>
 
-          <div class="footer-item">
-            <ul>
-              <li>
-                <a href="#">Über uns</a>
+          <div class="footer-cell">
+            <ul class="footer-list">
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Über uns</a>
               </li>
-              <li>
-                <a href="#">Team</a>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Team</a>
               </li>
-              <li>
-                <a href="#">Blog</a>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Blog</a>
               </li>
-              <li>
-                <a href="#">Generatoren</a>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Generatoren</a>
               </li>
-              <li>
-                <a href="#">Preise</a>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Preise</a>
               </li>
-              <li>
-                <a href="#">FAQ</a>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">FAQ</a>
               </li>
-              <li>
-                <a href="#">Partner</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer-item">
-            <ul>
-              <li>
-                <a href="#">Facharbeit</a>
-              </li>
-              <li>
-                <a href="#">Wissenschaftliche Arbeit</a>
-              </li>
-              <li>
-                <a href="#">Bachelorarbeit</a>
-              </li>
-              <li>
-                <a href="#">Literaturrecherche</a>
-              </li>
-              <li>
-                <a href="#">Masterarbeit</a>
-              </li>
-              <li>
-                <a href="#">Ghostwriting</a>
-              </li>
-              <li>
-                <a href="#">Lektorat & Korrekturlesen</a>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Partner</a>
               </li>
             </ul>
           </div>
 
-          <div class="footer-item">
-            <div>Wir im Netz:</div>
-            <div class="footer-social">
-              <a href="#" class="social-link"></a>
-              <a href="#" class="social-link"></a>
-              <a href="#" class="social-link"></a>
-              <a href="#" class="social-link"></a>
+          <div class="footer-cell">
+            <ul class="footer-list">
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Facharbeit</a>
+              </li>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Wissenschaftliche Arbeit</a>
+              </li>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Bachelorarbeit</a>
+              </li>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Literaturrecherche</a>
+              </li>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Masterarbeit</a>
+              </li>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Ghostwriting</a>
+              </li>
+              <li class="footer-item">
+                <a href="#" class="footer-item_link">Lektorat & Korrekturlesen</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-cell">
+            <p class="footer-cell_text">Wir im Netz:</p>
+            <div class="footer-links">
+              <a href="#" class="footer-link footer-link_fb"></a>
+              <a href="#" class="footer-link footer-link_inst"></a>
+              <a href="#" class="footer-link footer-link_yt"></a>
+              <a href="#" class="footer-link footer-link_pt"></a>
             </div>
 
-            <div>Unsere Zahlungsmethoden:</div>
-            <div class="footer-card">
-              <a href="#"></a>
-              <a href="#"></a>
+            <p class="footer-cell_text">Unsere Zahlungsmethoden:</p>
+            <div class="footer-links">
+              <a href="#" class="footer-link footer-link_visa"></a>
+              <a href="#" class="footer-link footer-link_mastercard"></a>
             </div>
 
-            <div>
+            <div class="footer-dmca">
               DMCA
-              <span>PROTECTED</span>
+              <span class="footer-dmca_span">PROTECTED</span>
             </div>
 
-            <a href="#" type="file">Mediadaten</a>
+            <a href="#" type="file" class="footer-pdf">Mediadaten</a>
           </div>
         </div>
 
-        <div>© Copyright 2016-2020 websitename.com</div>
-        <div>Alle Rechte vorbehalten</div>
+        <div class="footer-copyright">
+          <p class="footer-copyright_text">© Copyright 2016-2020 websitename.com</p>
+          <p class="footer-copyright_text">Alle Rechte vorbehalten</p>
+        </div>
+
       </div>
     </footer>
 
