--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="Description" content="test"/>
     <meta name="theme-color" content="#2c638f" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/Glide.js/2.1.0/css/glide.core.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/Glide.js/2.1.0/css/glide.theme.min.css">
   </head>
   <body>
     <header class="header">
@@ -187,45 +189,173 @@
            <p>Lass dich von den Erfolgsgeschichten unserer Kunden inspirieren!</p>
 
            <div class="slider-wrapper">
-             <div class="slider-item">
-               <div class="slider-item_wrap">
-                 <div class="slider-item_quote">
-                   <img src="images/icons/quote.svg" alt="quote">
+             <div class="glide">
+               <div class="glide__track" data-glide-el="track">
+                 <ul class="glide__slides">
+                   <li class="glide__slide" data-glide-dir="0">
+                     <div class="slider-item">
+                       <div class="slider-item_wrap">
+                         <div class="slider-item_quote">
+                           <img src="images/icons/quote.svg" alt="quote">
+                         </div>
+                         <div class="slider-item_rating">
+                           5
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                         </div>
+                       </div>
+                       <div class="slider-item_text">
+                         Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen.
+                         Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+                       </div>
+                       <div class="slider-item_id">
+                         <img class="slider-item_user" src="images/icons/user.svg">
+                         ID: 21015
+                       </div>
+                       <div class="slider-item_info">
+                         Bachelorarbeit|Geisteswissenschaften
+                       </div>
+                     </div>
+                   </li>
+                   <li class="glide__slide" data-glide-dir="1">
+                     <div class="slider-item">
+                       <div class="slider-item_wrap">
+                         <div class="slider-item_quote">
+                           <img src="images/icons/quote.svg" alt="quote">
+                         </div>
+                         <div class="slider-item_rating">
+                           5
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                         </div>
+                       </div>
+                       <div class="slider-item_text">
+                         Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen.
+                         Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+                       </div>
+                       <div class="slider-item_id">
+                         <img class="slider-item_user" src="images/icons/user.svg">
+                         ID: 21015
+                       </div>
+                       <div class="slider-item_info">
+                         Bachelorarbeit|Geisteswissenschaften
+                       </div>
+                     </div>
+                   </li>
+                   <li class="glide__slide" data-glide-dir="2">
+                     <div class="slider-item">
+                       <div class="slider-item_wrap">
+                         <div class="slider-item_quote">
+                           <img src="images/icons/quote.svg" alt="quote">
+                         </div>
+                         <div class="slider-item_rating">
+                           5
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                         </div>
+                       </div>
+                       <div class="slider-item_text">
+                         Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen.
+                         Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+                       </div>
+                       <div class="slider-item_id">
+                         <img class="slider-item_user" src="images/icons/user.svg">
+                         ID: 21015
+                       </div>
+                       <div class="slider-item_info">
+                         Bachelorarbeit|Geisteswissenschaften
+                       </div>
+                     </div>
+                   </li>
+                   <li class="glide__slide" data-glide-dir="3">
+                     <div class="slider-item">
+                       <div class="slider-item_wrap">
+                         <div class="slider-item_quote">
+                           <img src="images/icons/quote.svg" alt="quote">
+                         </div>
+                         <div class="slider-item_rating">
+                           5
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                           <span class="slider-item_star">
+                    <img src="images/icons/star-green.svg" alt="star">
+                  </span>
+                         </div>
+                       </div>
+                       <div class="slider-item_text">
+                         Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen.
+                         Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+                       </div>
+                       <div class="slider-item_id">
+                         <img class="slider-item_user" src="images/icons/user.svg">
+                         ID: 21015
+                       </div>
+                       <div class="slider-item_info">
+                         Bachelorarbeit|Geisteswissenschaften
+                       </div>
+                     </div>
+                   </li>
+                 </ul>
+               </div>
+                 <div class="glide__bullets" data-glide-el="controls[nav]">
+                     <button class="glide__bullet" data-glide-dir="=0"></button>
+                     <button class="glide__bullet" data-glide-dir="=1"></button>
+                     <button class="glide__bullet" data-glide-dir="=2"></button>
+                     <button class="glide__bullet" data-glide-dir="=3"></button>
                  </div>
-                 <div class="slider-item_rating">
-                   5
-                  <span class="slider-item_star">
-                    <img src="images/icons/star-green.svg" alt="star">
-                  </span>
-                  <span class="slider-item_star">
-                    <img src="images/icons/star-green.svg" alt="star">
-                  </span>
-                  <span class="slider-item_star">
-                    <img src="images/icons/star-green.svg" alt="star">
-                  </span>
-                  <span class="slider-item_star">
-                    <img src="images/icons/star-green.svg" alt="star">
-                  </span>
-                  <span class="slider-item_star">
-                    <img src="images/icons/star-green.svg" alt="star">
-                  </span>
-                 </div>
-               </div>
-               <div class="slider-item_text">
-                 Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen.
-                 Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
-               </div>
-               <div class="slider-item_id">
-                 <img class="slider-item_user" src="images/icons/user.svg">
-                 ID: 21015
-               </div>
-               <div class="slider-item_info">
-                 Bachelorarbeit|Geisteswissenschaften
-               </div>
              </div>
            </div>
-
            <a href="#" class="slider-link">Feedback hinzufügen</a>
+
          </div>
 
          <div class="promo">
@@ -345,44 +475,43 @@
 
            <div class="accordion">
              <div class="accordion-item">
-               <h4>
+               <h4 class="accordion-title">
                  Wann muss ich eine Facharbeit schreiben?
                </h4>
-
-               <div>
-                 <p>
+               <div class="accordion-content">
+                 <p class="accordion-text">
                    Eine Facharbeit wird für gewöhnlich in der Oberstufe geschrieben.
                    Sie stellt eine Art Vorbereitung auf das wissenschaftliche Arbeiten an der Universität dar.
                  </p>
                </div>
              </div>
+
              <div class="accordion-item">
-               <h4>
+               <h4 class="accordion-title">
                  Was gehört in eine Facharbeit?
                </h4>
-
-               <div>
-                <p>
-                  Die folgende Gliederung hat sich für eine Facharbeit etabliert.
-                </p>
-                 <ol>
-                   <li>1. Deckblatt</li>
-                   <li>2. Inhaltsverzeichnis</li>
-                   <li>3. Einleitung</li>
-                   <li>4. Darstellung des Facharbeitsthemas (= Hauptteil)</li>
-                   <li>5. Fazit</li>
-                   <li>6. Anhang</li>
-                   <li>7. Eigenständigkeitserklärung.</li>
-                 </ol>
-               </div>
+                <div class="accordion-content">
+                    <p class="accordion-text">
+                      Die folgende Gliederung hat sich für eine Facharbeit etabliert.
+                    </p>
+                     <ul class="accordion-list">
+                       <li class="accordion-list-item">Deckblatt</li>
+                       <li class="accordion-list-item">Inhaltsverzeichnis</li>
+                       <li class="accordion-list-item">Einleitung</li>
+                       <li class="accordion-list-item">Darstellung des Facharbeitsthemas (= Hauptteil)</li>
+                       <li class="accordion-list-item">Fazit</li>
+                       <li class="accordion-list-item">Anhang</li>
+                       <li class="accordion-list-item">Eigenständigkeitserklärung.</li>
+                     </ul>
+                </div>
              </div>
+
              <div class="accordion-item">
-               <h4>
+               <h4 class="accordion-title">
                  Wie lange braucht man, um eine Facharbeit zu schreiben?
                </h4>
-
-               <div>
-                <p>
+               <div class="accordion-content">
+                <p class="accordion-text">
                   Diese Frage kann nicht pauschal beantwortet werden, da sich sowohl Deine Motivation als auch
                   Deine Erfahrung bzw. Dein Wissen bezüglich der Facharbeit auf den Arbeitsprozess auswirken.
                   Derweil arbeiten unsere Autoren höchst effizient und liefern Deine wissenschaftliche
@@ -390,6 +519,7 @@
                 </p>
                </div>
              </div>
+
            </div>
 
            <button class="btn btn-green btn-middle">
