Added media quaries

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,14 @@
                 </li>
               </ul>
             </nav>
-            <button class="btn btn-small btn-green">Anfragen</button>
-            <button class="btn btn-small btn-grey btn-open">Anmelden</button>
+            <button class="btn btn-small btn-green header-btn">Anfragen</button>
+            <button class="btn btn-small btn-grey header-btn btn-open">Anmelden</button>
           </div>
+
+          <a href="#" class="header-mobile-btn">
+              <img src="images/icons/menu.svg" alt="menu">
+          </a>
+
         </div>
     </header>
 
@@ -728,7 +733,7 @@
                 <form class="popup-form" action="post">
                     <input class="popup-input" type="text" placeholder="deine@email.com">
                     <input class="popup-input" type="text" placeholder="Name">
-                    <button class="btn btn-green btn-middle popup-btn">Ja, ich möchte!</button>
+                    <button class="btn btn-green btn-middle popup-btn" type="submit">Ja, ich möchte!</button>
                 </form>
             </div>
         </div>
