Added responsive styles

--- a/src/index.html
+++ b/src/index.html
@@ -79,17 +79,17 @@
                (Haus-, <a href="#">Seminar-, Bachelor-, Masterarbeit</a> usw.), Korrekturlesen, Lektorat und Plagiatsprüfung.
                Diese Leistungen stehen nicht nur auf Deutsch, sondern beispielsweise auch auf <a href="#">Englisch</a> zur Verfügung.
              </p>
-             <button class="btn btn-middle btn-green">
+             <button class="btn btn-middle btn-green btn-full">
                Probier jetzt aus
              </button>
            </div>
-           <div class="promo-img">
+           <div class="promo-img promo-img_tablet">
              <img src="images/promo/promo-image.png" alt="promo">
            </div>
          </div>
 
          <div class="promo">
-           <div class="promo-img">
+           <div class="promo-img promo-order_last">
              <img src="images/promo/requirements-image.png" alt="requirements-image">
 
              <div class="card card-absolute">
@@ -105,7 +105,7 @@
              </div>
 
            </div>
-           <div class="promo-text">
+           <div class="promo-text promo-order_first">
             <h2>
               Die Anforderungen an eine Facharbeit
             </h2>
@@ -194,7 +194,7 @@
              </div>
              <div class="form-item form-item_result">
                 <span class="form-price">€ 56.25</span>
-                <button class="btn btn-green btn-middle form-btn" type="submit">Anfragen</button>
+                <button class="btn btn-green btn-middle form-btn btn-full" type="submit">Anfragen</button>
              </div>
            </form>
          </div>
@@ -208,11 +208,11 @@
            <div class="circle">
              <div class="circle-item">
                <span class="circle-number">1</span>
-               <p class="circle-text">Das passende Thema finden</p>
+               <p class="circle-text circle-text_hide">Das passende Thema finden</p>
              </div>
              <div class="circle-item">
                <span class="circle-number">2</span>
-               <p class="circle-text">Die Gliederung erstellen</p>
+               <p class="circle-text circle-text_hide">Die Gliederung erstellen</p>
              </div>
              <div class="circle-item">
                <span class="circle-number">3</span>
@@ -220,7 +220,7 @@
              </div>
              <div class="circle-item circle-item_disable">
                <span class="circle-number">4</span>
-               <p class="circle-text">Die Facharbeit überprüfen (lassen)</p>
+               <p class="circle-text circle-text_hide">Die Facharbeit überprüfen (lassen)</p>
              </div>
            </div>
 
@@ -487,7 +487,7 @@
          </div>
 
          <div class="promo promo-vertical_center">
-           <div class="promo-text">
+           <div class="promo-text promo-order_last">
              <h2>
                Unbedingt beachten: typische Fehler, die Lernende begehe
              </h2>
@@ -508,7 +508,7 @@
              </p>
 
            </div>
-           <div class="promo-img">
+           <div class="promo-img promo-order_first">
              <img src="images/promo/man-image.png" alt="man-image">
            </div>
          </div>
@@ -588,7 +588,7 @@
 
            </div>
 
-           <button class="btn btn-green btn-middle">
+           <button class="btn btn-green btn-middle btn-hide">
              Jetzt unverbindlich anfragen
            </button>
          </div>
@@ -600,7 +600,7 @@
       <div class="container">
 
         <div class="footer-content">
-          <div class="footer-cell">
+          <div class="footer-cell footer-cell_third">
             <div class="footer-contact">
               <a href="tel:+4962153399112" class="footer-phone">+49(621) <span class="footer-phone_bold">53399112</span></a>
               <p class="footer-contact_text"> Fragen? Ruf uns einfach an!</p>
@@ -635,7 +635,7 @@
             </div>
           </div>
 
-          <div class="footer-cell">
+          <div class="footer-cell footer-cell_first">
             <ul class="footer-list">
               <li class="footer-item">
                 <a href="#" class="footer-item_link">Über uns</a>
@@ -661,7 +661,7 @@
             </ul>
           </div>
 
-          <div class="footer-cell">
+          <div class="footer-cell footer-cell_second">
             <ul class="footer-list">
               <li class="footer-item">
                 <a href="#" class="footer-item_link">Facharbeit</a>
@@ -687,7 +687,7 @@
             </ul>
           </div>
 
-          <div class="footer-cell">
+          <div class="footer-cell footer-cell_last">
             <p class="footer-cell_text">Wir im Netz:</p>
             <div class="footer-links">
               <a href="#" class="footer-link footer-link_fb"></a>
